# wormhole-integration-poc

./: .gitignore  Cargo.toml  all.bash  package.json
avareum-rosen-bridge/: Anchor.toml
avareum-rosen-bridge/programs/avareum-rosen-bridge/: Cargo.toml
avareum-rosen-bridge/programs/avareum-rosen-bridge/src/: lib.rs
avareum-rosen-bridge/tests/: avareum-rosen-bridge.ts
js/rosen-bridge-web3/: package.json  tsconfig.json
js/rosen-bridge-web3/src/: index.ts
js/wormhole-sdk-playground/: package.json
js/wormhole-sdk-playground/src/: index.ts
rosen-bridge/: Cargo.toml
rosen-bridge/src/: error.rs  instruction.rs  lib.rs  message.rs  processor.rs
