cargo-features = ["edition2021"]

[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
token-bridge = { git = "https://github.com/avareum/wormhole", branch = "dev.v2.ava" }
wormhole-bridge-solana = { git = "https://github.com/avareum/wormhole", branch = "dev.v2.ava", features = ["no-entrypoint"] }
solana-program = "=1.7.0"
spl-token = "3.1.0"
borsh = "0.9.1"
arrayref = "0.3.6"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"


[features]
test-bpf = []



[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.0"
solana-sdk = "=1.7.0"
solana-validator = "=1.7.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1